      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
    </dependency>

  Note that Log4j 2.x does not support properties configuration files anymore and that the configuration file should be
  named log4j2.xml. Please read :
    https://logging.apache.org/log4j/2.x/manual/configuration.html
    https://logging.apache.org/log4j/2.x/manual/migration.html

4.2
===

4.1
===
- We have migrated to Apache DBCP2.
  All explicit dependencies to commons-pool must be removed from your pom.xml, i.e. delete in all pom.xml :
      <dependency>
        <groupId>commons-pool</groupId>
        <artifactId>commons-pool</artifactId>
      </dependency>

  You have to change the dependency on the DBCP artifact :
    replace in every pom.xml :
      <dependency>
        <groupId>commons-dbcp</groupId>
        <artifactId>commons-dbcp</artifactId>
      </dependency>
    by :
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-dbcp2</artifactId>
      </dependency>

    search and replace globally :
      org.apache.commons.dbcp.BasicDataSource
    by :
      org.apache.commons.dbcp2.BasicDataSource

    adapt any custom configurations of DBCP datasource using the following document :
      http://commons.apache.org/proper/commons-dbcp/configuration.html

- We have created new Qooxdoo themes in Jspresso CE and EE. If you want to benefit from the new themes, please update
  your application startup/qooxdoo/client/src/main/py/config.json :
  for Jspresso EE :
    replace :
      {
        "path": "${TARGET}/jspresso-ext-qooxdoo-zip/py/library.json",
        "as": "jspresso-ext-qooxdoo"
      }
    by :
      {
        "path": "${TARGET}/jspresso-ext-qooxdoo-zip/py/library.json",
        "as": "jspresso-ext-qooxdoo"
      }
      ,
      {
        "path": "${TARGET}/jspresso-qooxdoo-theme-zip/py/library.json",
        "as": "jspresso-qooxdoo-theme"
      }

    replace :